--- a/grails-app/assets/stylesheets/nrm/css/screen.css
+++ b/grails-app/assets/stylesheets/nrm/css/screen.css
@@ -2445,7 +2445,6 @@ div#announcement p {
 }
 
 .container-fluid form.search.merit {
-    margin-top: 12px;
     display: block;
     float: left;
 }
